--- a/css/my_css/homepage.css
+++ b/css/my_css/homepage.css
@@ -1,6 +1,6 @@
-.div_playlist .div_track .div_likes_and_downloads a,
-.div_playlist .div_track .div_likes_and_downloads a:visited, .div_playlist .div_track .div_likes_and_downloads, .div_playlist .div_track .div_track_info .div_main_info, .div_playlist .div_track .div_track_info, .div_playlist .div_track, .div_playlist, .div_info_about_website .div_playlist_heading, .div_info_about_website .btn_info,
-.div_info_about_website i, .div_info_about_website, .div_video {
+.div_video, .div_player_component, .div_player_component .div_info_about_website, .div_player_component .div_info_about_website .btn_info,
+.div_player_component .div_info_about_website i, .div_player_component .div_info_about_website .div_playlist_heading, .div_player_component .div_playlist, .div_player_component .div_playlist .div_track, .div_player_component .div_playlist .div_track .div_track_info, .div_player_component .div_playlist .div_track .div_track_info .div_main_info, .div_player_component .div_playlist .div_track .div_likes_and_downloads, .div_player_component .div_playlist .div_track .div_likes_and_downloads a,
+.div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -10,178 +10,144 @@
   justify-content: center;
   width: 100%;
   margin: 0px;
-  padding: 0px;
-}
+  padding: 0px; }
 
-.div_playlist .div_track .div_likes_and_downloads a:active, .div_playlist .div_track .div_likes_and_downloads a:hover, .div_info_about_website i:active, .div_info_about_website i:hover {
+.div_player_component .div_info_about_website i:hover, .div_player_component .div_info_about_website i:active, .div_player_component .div_playlist .div_track .div_likes_and_downloads a:hover, .div_player_component .div_playlist .div_track .div_likes_and_downloads a:active {
   background: #d95d39;
-  background: linear-gradient(90deg, #d95d39 0%, #5f0f40 100%);
-}
+  background: linear-gradient(90deg, #d95d39 0%, #5f0f40 100%); }
 
-.div_playlist .selected_track:hover, .div_playlist .selected_track {
+.div_player_component .div_playlist .selected_track, .div_player_component .div_playlist .selected_track:hover {
   background: #5f0f40;
-  background: linear-gradient(90deg, #5f0f40 0%, #d95d39 100%);
-}
+  background: linear-gradient(90deg, #5f0f40 0%, #d95d39 100%); }
 
 html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
   background-color: #000000;
-  color: #FFFFFF;
-}
-html p {
-  margin: 0px;
-  padding: 0px;
-}
-
-::-moz-selection {
-  background-color: #474747;
-  color: #F18805;
-}
+  color: #FFFFFF; }
+  html p {
+    margin: 0px;
+    padding: 0px; }
 
 ::selection {
   background-color: #474747;
-  color: #F18805;
-}
+  color: #F18805; }
 
 .div_video {
-  background-color: #1F1F1F;
-}
-.div_video video {
-  width: 100%;
-  margin-top: 80px;
-}
+  background-color: #1F1F1F; }
+  .div_video video {
+    width: 100%;
+    margin-top: 80px; }
 
-.div_info_about_website .btn_info,
-.div_info_about_website i {
+.div_player_component .div_info_about_website .btn_info,
+.div_player_component .div_info_about_website i {
   width: 1.4rem;
   height: 1.4rem;
   border-style: none;
   border-radius: 100%;
   font-size: 1.6rem;
-  cursor: pointer;
-}
-.div_info_about_website i:hover {
+  cursor: pointer; }
+.div_player_component .div_info_about_website i:hover {
   color: #FFFFFF;
-  transition: 100ms all;
-}
-.div_info_about_website i:active {
+  transition: 100ms all; }
+.div_player_component .div_info_about_website i:active {
   color: #FFFFFF;
-  transition: 100ms all;
-}
-.div_info_about_website .btn_info {
+  transition: 100ms all; }
+.div_player_component .div_info_about_website .btn_info {
   position: relative;
-  margin-top: -0.7rem;
-}
-.div_info_about_website .div_playlist_heading {
+  margin-top: -0.7rem; }
+.div_player_component .div_info_about_website .div_playlist_heading {
   align-content: flex-end;
   height: 4rem;
-  border-bottom: 2px solid #FFFFFF;
-}
-.div_info_about_website .div_playlist_heading p {
-  margin: 0px;
-  margin-bottom: 0.25rem;
-  padding: 0px;
-  font-size: 1.5rem;
-}
-
-.background_image {
+  border-bottom: 2px solid #FFFFFF; }
+  .div_player_component .div_info_about_website .div_playlist_heading p {
+    margin: 0px;
+    margin-bottom: 0.25rem;
+    padding: 0px;
+    font-size: 1.5rem; }
+.div_player_component .background_image {
   top: 0;
   left: 0;
   right: 0;
   position: fixed;
   filter: blur(4px);
-  z-index: -10;
-}
-
-.div_playlist .div_track {
+  z-index: -10; }
+.div_player_component .div_playlist .div_track {
   justify-content: space-between;
   border-bottom: 2px solid #FFFFFF;
-  cursor: pointer;
-}
-.div_playlist .div_track .div_track_info {
-  justify-content: flex-start;
-  min-width: 196px;
-  max-width: 60%;
-  padding-top: 0.6rem;
-  padding-bottom: 0.4rem;
-}
-.div_playlist .div_track .div_track_info .div_track_index {
-  min-width: 32px;
-  max-width: 20%;
-}
-.div_playlist .div_track .div_track_info .div_track_index p {
-  margin-left: 0.5rem;
-}
-.div_playlist .div_track .div_track_info .div_main_info {
-  min-width: 154px;
-  max-width: 70%;
-}
-.div_playlist .div_track .div_track_info .div_main_info .div_artist_name,
-.div_playlist .div_track .div_track_info .div_main_info .div_track_name {
-  width: 100%;
-}
-.div_playlist .div_track .div_track_info .div_main_info .div_artist_name p,
-.div_playlist .div_track .div_track_info .div_main_info .div_track_name p {
-  margin-left: 0.5rem;
-}
-.div_playlist .div_track .div_track_info .div_main_info .div_track_name {
-  font-weight: bold;
-}
-.div_playlist .div_track .div_likes_and_downloads {
-  justify-content: flex-end;
-  min-width: 124px;
-  max-width: 20%;
-}
-.div_playlist .div_track .div_likes_and_downloads .div_likes p {
-  margin-top: 4px;
-  margin-right: 0.5rem;
-  font-weight: bold;
-}
-.div_playlist .div_track .div_likes_and_downloads a,
-.div_playlist .div_track .div_likes_and_downloads a:visited {
-  width: 2rem;
-  height: 2rem;
-  margin-right: 0.5rem;
-  border-radius: 2rem;
-  background-color: #474747;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-.div_playlist .div_track .div_likes_and_downloads a:visited {
-  transition: 100ms all;
-}
-.div_playlist .div_track .div_likes_and_downloads a:hover {
-  color: #FFFFFF;
-  transition: 100ms all;
-}
-.div_playlist .div_track .div_likes_and_downloads a:active {
-  color: #FFFFFF;
-  transition: 100ms all;
-}
-.div_playlist .div_track:hover {
+  cursor: pointer; }
+  .div_player_component .div_playlist .div_track .div_track_info {
+    justify-content: flex-start;
+    min-width: 196px;
+    max-width: 60%;
+    padding-top: 0.6rem;
+    padding-bottom: 0.4rem; }
+    .div_player_component .div_playlist .div_track .div_track_info .div_track_index {
+      min-width: 32px;
+      max-width: 20%; }
+      .div_player_component .div_playlist .div_track .div_track_info .div_track_index p {
+        margin-left: 0.5rem; }
+    .div_player_component .div_playlist .div_track .div_track_info .div_main_info {
+      min-width: 154px;
+      max-width: 70%; }
+      .div_player_component .div_playlist .div_track .div_track_info .div_main_info .div_artist_name,
+      .div_player_component .div_playlist .div_track .div_track_info .div_main_info .div_track_name {
+        width: 100%; }
+        .div_player_component .div_playlist .div_track .div_track_info .div_main_info .div_artist_name p,
+        .div_player_component .div_playlist .div_track .div_track_info .div_main_info .div_track_name p {
+          margin-left: 0.5rem; }
+      .div_player_component .div_playlist .div_track .div_track_info .div_main_info .div_track_name {
+        font-weight: bold; }
+  .div_player_component .div_playlist .div_track .div_likes_and_downloads {
+    justify-content: flex-end;
+    min-width: 124px;
+    max-width: 20%; }
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads .div_likes p {
+      margin-top: 4px;
+      margin-right: 0.5rem;
+      font-weight: bold; }
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads a,
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited {
+      width: 2rem;
+      height: 2rem;
+      margin-right: 0.5rem;
+      border-radius: 2rem;
+      background-color: #474747;
+      color: #FFFFFF;
+      text-decoration: none; }
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited {
+      transition: 100ms all; }
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads a:hover {
+      color: #FFFFFF;
+      transition: 100ms all; }
+    .div_player_component .div_playlist .div_track .div_likes_and_downloads a:active {
+      color: #FFFFFF;
+      transition: 100ms all; }
+.div_player_component .div_playlist .div_track:hover {
   background-color: #FFFFFF;
   color: #1F1F1F;
-  transition: 100ms all;
-}
-.div_playlist .selected_track {
+  transition: 100ms all; }
+.div_player_component .div_playlist .selected_track {
+  color: #FFFFFF; }
+  .div_player_component .div_playlist .selected_track .div_likes_and_downloads a,
+  .div_player_component .div_playlist .selected_track .div_likes_and_downloads a:hover,
+  .div_player_component .div_playlist .selected_track .div_likes_and_downloads a:active {
+    background-color: #FFFFFF;
+    color: #1F1F1F;
+    transition: 100ms all; }
+.div_player_component .div_playlist .selected_track:hover {
   color: #FFFFFF;
-}
-.div_playlist .selected_track .div_likes_and_downloads a,
-.div_playlist .selected_track .div_likes_and_downloads a:hover,
-.div_playlist .selected_track .div_likes_and_downloads a:active {
-  background-color: #FFFFFF;
-  color: #1F1F1F;
-  transition: 100ms all;
-}
-.div_playlist .selected_track:hover {
-  color: #FFFFFF;
-  transition: 100ms all;
-}
-.div_playlist .selected_track:hover a:hover,
-.div_playlist .selected_track:hover a:active {
-  background: #FFFFFF;
-  background-color: #FFFFFF;
-  color: #1F1F1F;
-  transition: 100ms all;
-}/*# sourceMappingURL=homepage.css.map */
+  transition: 100ms all; }
+  .div_player_component .div_playlist .selected_track:hover a:hover,
+  .div_player_component .div_playlist .selected_track:hover a:active {
+    background: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #1F1F1F;
+    transition: 100ms all; }
+
+/* @media only screen and (min-device-width: 1024px) 
+{
+        
+} */
+
+/*# sourceMappingURL=homepage.css.map */
