--- a/css/my_css/homepage.scss
+++ b/css/my_css/homepage.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 
 
-// min. viewport = 320 x 480
+// min-viewport = 320 x 480 [px]
 html
 {
         font-size: 16px;
@@ -43,134 +43,122 @@ html
 
 
 
-
-.div_info_about_website
+.div_player_component
 {
         @extend %flexbox;
 
-        .btn_info,
-        i
+        .div_info_about_website
         {
                 @extend %flexbox;
-                
-                width: 1.4rem;
-                height: 1.4rem;
 
-                border-style: none;
-                border-radius: 100%;
-
-                font-size: 1.6rem;
-
-                cursor: pointer;
-        }
-
-        i:hover
-        {
-                @extend %gradient;
-                color: $white;
-
-                transition: 100ms all;
-        }
-
-        i:active
-        {
-                @extend %gradient;
-                color: $white;
-
-                transition: 100ms all;
-        }
-
-        .btn_info
-        {
-                position: relative;
-
-                margin-top: -0.7rem;
-        }
-
-        .div_playlist_heading
-        {
-                @extend %flexbox;
-                align-content: flex-end;
-
-                height: 4rem;
-
-                border-bottom: 2px solid $white;
-
-                p
-                {
-                        margin: 0px;
-                        margin-bottom: 0.25rem;
-                        padding: 0px;
-
-                        font-size: 1.5rem;
-                }
-        }
-}
-
-
-
-
-.background_image
-{
-        top: 0;
-        left: 0;
-        right: 0;
-        position: fixed;
-
-        filter: blur(4px);
-
-        z-index: -10;
-}
-
-
-
-
-.div_playlist
-{
-        @extend %flexbox;
-
-        .div_track
-        {
-                @extend %flexbox;
-                justify-content: space-between;
-
-                border-bottom: 2px solid $white;
-
-                cursor: pointer;
-
-                .div_track_info
+                .btn_info,
+                i
                 {
                         @extend %flexbox;
-                        justify-content: flex-start;
+                        
+                        width: 1.4rem;
+                        height: 1.4rem;
 
-                        min-width: 196px;
-                        max-width: 60%;
+                        border-style: none;
+                        border-radius: 100%;
 
-                        padding-top: 0.6rem;
-                        padding-bottom: 0.4rem;
+                        font-size: 1.6rem;
 
-                        .div_track_index
+                        cursor: pointer;
+                }
+
+                i:hover
+                {
+                        @extend %gradient;
+                        color: $white;
+
+                        transition: 100ms all;
+                }
+
+                i:active
+                {
+                        @extend %gradient;
+                        color: $white;
+
+                        transition: 100ms all;
+                }
+
+                .btn_info
+                {
+                        position: relative;
+
+                        margin-top: -0.7rem;
+                }
+
+
+
+
+                .div_playlist_heading
+                {
+                        @extend %flexbox;
+                        align-content: flex-end;
+
+                        height: 4rem;
+
+                        border-bottom: 2px solid $white;
+
+                        p
                         {
-                                min-width: 32px;
-                                max-width: 20%;
+                                margin: 0px;
+                                margin-bottom: 0.25rem;
+                                padding: 0px;
 
-                                p
-                                {
-                                        margin-left: 0.5rem;
-                                }
+                                font-size: 1.5rem;
                         }
+                }
+        }
 
-                        .div_main_info
+
+
+
+        .background_image
+        {
+                top: 0;
+                left: 0;
+                right: 0;
+                position: fixed;
+
+                filter: blur(4px);
+
+                z-index: -10;
+        }
+
+
+
+
+        .div_playlist
+        {
+                @extend %flexbox;
+
+                .div_track
+                {
+                        @extend %flexbox;
+                        justify-content: space-between;
+
+                        border-bottom: 2px solid $white;
+
+                        cursor: pointer;
+
+                        .div_track_info
                         {
                                 @extend %flexbox;
+                                justify-content: flex-start;
 
-                                min-width: 154px;
-                                max-width: 70%;
+                                min-width: 196px;
+                                max-width: 60%;
 
-                                .div_artist_name,
-                                .div_track_name
+                                padding-top: 0.6rem;
+                                padding-bottom: 0.4rem;
+
+                                .div_track_index
                                 {
-                                        width: 100%;
+                                        min-width: 32px;
+                                        max-width: 20%;
 
                                         p
                                         {
@@ -178,115 +166,142 @@ html
                                         }
                                 }
 
-                                .div_track_name
+                                .div_main_info
                                 {
-                                        font-weight: bold;
+                                        @extend %flexbox;
+
+                                        min-width: 154px;
+                                        max-width: 70%;
+
+                                        .div_artist_name,
+                                        .div_track_name
+                                        {
+                                                width: 100%;
+
+                                                p
+                                                {
+                                                        margin-left: 0.5rem;
+                                                }
+                                        }
+
+                                        .div_track_name
+                                        {
+                                                font-weight: bold;
+                                        }
                                 }
                         }
-                }
 
-                .div_likes_and_downloads
-                {
-                        @extend %flexbox;
-                        justify-content: flex-end;
-
-                        min-width: 124px;
-                        max-width: 20%;
-
-                        .div_likes
-                        {
-                                p
-                                {
-                                        margin-top: 4px;
-                                        margin-right: 0.5rem;
-
-                                        font-weight: bold;
-                                }
-                        }
-
-                        a,
-                        a:visited
+                        .div_likes_and_downloads
                         {
                                 @extend %flexbox;
+                                justify-content: flex-end;
 
-                                width: 2rem;
-                                height: 2rem;
+                                min-width: 124px;
+                                max-width: 20%;
 
-                                margin-right: 0.5rem;
+                                .div_likes
+                                {
+                                        p
+                                        {
+                                                margin-top: 4px;
+                                                margin-right: 0.5rem;
 
-                                border-radius: 2rem;
+                                                font-weight: bold;
+                                        }
+                                }
 
-                                background-color: $dark-grey;
-                                color: $white;
+                                a,
+                                a:visited
+                                {
+                                        @extend %flexbox;
 
-                                text-decoration: none;
-                        }
+                                        width: 2rem;
+                                        height: 2rem;
 
-                        a:visited
-                        {
-                                transition: 100ms all;
-                        }
+                                        margin-right: 0.5rem;
 
-                        a:hover
-                        {
-                                @extend %gradient;
-                                color: $white;
+                                        border-radius: 2rem;
 
-                                transition: 100ms all;
-                        }
+                                        background-color: $dark-grey;
+                                        color: $white;
 
-                        a:active
-                        {
-                                @extend %gradient;
-                                color: $white;
+                                        text-decoration: none;
+                                }
 
-                                transition: 100ms all;
+                                a:visited
+                                {
+                                        transition: 100ms all;
+                                }
+
+                                a:hover
+                                {
+                                        @extend %gradient;
+                                        color: $white;
+
+                                        transition: 100ms all;
+                                }
+
+                                a:active
+                                {
+                                        @extend %gradient;
+                                        color: $white;
+
+                                        transition: 100ms all;
+                                }
                         }
                 }
-        }
 
-        .div_track:hover
-        {
-                background-color: $white;
-                color: $grey;
-
-                transition: 100ms all;
-        }
-
-        .selected_track
-        {
-                @extend %anti_gradient;
-                color: $white;
-
-                .div_likes_and_downloads
+                .div_track:hover
                 {
-                        a,
+                        background-color: $white;
+                        color: $grey;
+
+                        transition: 100ms all;
+                }
+
+
+
+
+                .selected_track
+                {
+                        @extend %anti_gradient;
+                        color: $white;
+
+                        .div_likes_and_downloads
+                        {
+                                a,
+                                a:hover,
+                                a:active
+                                {
+                                        background-color: $white;
+                                        color: $grey;
+
+                                        transition: 100ms all;
+                                }
+                        }
+                }
+
+                .selected_track:hover
+                {
+                        @extend %anti_gradient;
+                        color: $white;
+
+                        transition: 100ms all;
+
                         a:hover,
                         a:active
                         {
+                                background: $white;
                                 background-color: $white;
                                 color: $grey;
-
+                
                                 transition: 100ms all;
                         }
                 }
         }
-
-        .selected_track:hover
-        {
-                @extend %anti_gradient;
-                color: $white;
-
-                transition: 100ms all;
-
-                a:hover,
-                a:active
-                {
-                        background: $white;
-                        background-color: $white;
-                        color: $grey;
-        
-                        transition: 100ms all;
-                }
-        }
 }
+
+/* @media only screen and (min-device-width: 1024px) 
+{
+        
+} */
