--- a/css/my_css/webmenu.scss
+++ b/css/my_css/webmenu.scss
@@ -1,5 +1,6 @@
 @import "mixins";
 
+
 $menu_border_radius: 16px;
 $menu_padding_value: 8px;
 
@@ -49,13 +50,12 @@ $menu_padding_value: 8px;
 
 .div_track_progress
 {
-        width: 100%;
-
         bottom: 0;
         left: 0;
         right: 0;
         position: fixed;
 
+        width: 100%;
         height: 1.75rem;
         
         margin-bottom: 3.8rem;
@@ -166,7 +166,7 @@ $menu_padding_value: 8px;
 
         .active_state:hover
         {
-                @extend %anti-gradient;
+                @extend %anti_gradient;
 
                 transition: 100ms all;
         }
@@ -176,5 +176,5 @@ $menu_padding_value: 8px;
 {
         @extend %flexbox;
         
-        height: 88px;
+        height: 89px;
 }
