--- a/css/my_css/webmenu.scss
+++ b/css/my_css/webmenu.scss
@@ -178,3 +178,24 @@ $menu_padding_value: 8px;
         
         height: 89px;
 }
+
+
+
+
+@media only screen and (min-device-width: 1024px) 
+{
+        .div_current_track_playing_info
+        {
+                position: unset;
+        }
+
+        .div_track_progress
+        {
+                position: unset;
+        }
+
+        .div_main_controls
+        {
+                position: unset;
+        }
+}
